[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "reducer"
dynamic = ["version"]
description = "Process FITS files"
readme = "README.rst"
license = "BSD-3-clause"
authors = [
    { name = "Matt Craig", email = "mcraig@mnstate.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy>=4.0",
    "ccdproc>=2",
    "dask",
    "ipywidgets >=7.5",
    "matplotlib",
    "msumastro>=1",
    "numpy",
    "scikit-image",
    "scipy",
    "jupyter-app-launcher",
    "ipyautoui",
]

[project.optional-dependencies]
docs = [
    "numpydoc",
    "sphinx-argparse",
    "sphinx_rtd_theme",
]

[project.scripts]
reducer = "reducer:main"

[project.urls]
Homepage = "http://reducer.readthedocs.org"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "reducer/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/reducer",
    ".jp_app_launcher_reducer.yaml",
]

[tool.hatch.build.targets.wheel.shared-data]
# This section determines what data files are included in the wheel
# and where they should eventually be installed in the user's environment.
# "docs/_static/stellarphot-logo.svg" = "share/jupyter/stellarphot/stellarphot-logo.svg"
# This includes the notebooks used in the launcher
"reducer/reducer-template.ipynb" = "share/jupyter/reducer/reducer-template.ipynb"
".jp_app_launcher_reducer.yaml" = "share/jupyter/jupyter_app_launcher/jp_app_launcher_reducer.yaml"
